// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Latex should have 2 lines 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <ScrollView
      contentContainerStyle={
        Object {
          "flexDirection": "column",
          "minHeight": "100%",
          "paddingLeft": 10,
          "paddingVertical": 10,
        }
      }
      horizontal={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginHorizontal": 5,
            "paddingVertical": 4,
          }
        }
      >
        <ForwardRef
          color="black"
          math="\\\\frac{1}{2} = 0.5^1 + (x^0 - e^{\\\\pi - \\\\frac{2*pi}}{2}} \\\\\\\\ Test = 1"
          onError={[Function]}
          renderError={[Function]}
          resizeMode="cover"
        />
      </View>
    </ScrollView>
  </ScrollView>
</RNCSafeAreaView>
`;

exports[`Latex should have 4 lines 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <ScrollView
      contentContainerStyle={
        Object {
          "flexDirection": "column",
          "minHeight": "100%",
          "paddingLeft": 10,
          "paddingVertical": 10,
        }
      }
      horizontal={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginHorizontal": 5,
            "paddingVertical": 4,
          }
        }
      >
        <ForwardRef
          color="black"
          math="\\\\frac{1}{2} = 0.5^1 + (x^0 - e^{\\\\pi - \\\\frac{2*pi}}{2}} \\\\\\\\ Test = 1 \\\\\\\\ \\\\alpha = \\\\beta \\\\\\\\ 1 != 0"
          onError={[Function]}
          renderError={[Function]}
          resizeMode="cover"
        />
      </View>
    </ScrollView>
  </ScrollView>
</RNCSafeAreaView>
`;

exports[`Latex should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <ScrollView
      contentContainerStyle={
        Object {
          "flexDirection": "column",
          "minHeight": "100%",
          "paddingLeft": 10,
          "paddingVertical": 10,
        }
      }
      horizontal={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginHorizontal": 5,
            "paddingVertical": 4,
          }
        }
      >
        <ForwardRef
          color="black"
          math="\\\\frac{1}{2} = 0.5^1 + (x^0 - e^{\\\\pi - \\\\frac{2*pi}}{2}}"
          onError={[Function]}
          renderError={[Function]}
          resizeMode="cover"
        />
      </View>
    </ScrollView>
  </ScrollView>
</RNCSafeAreaView>
`;
